<resources>
    <string name="app_name">Mover Runner</string>
    <!--REQUEST LABELS-->
    <string name="get">GET</string>
    <string name="post">POST</string>
    <string name="title_activity_home">Home</string>
    <!--MENU LABELS-->
    <string name="requests">Requests</string>
    <string name="sensor_display">Display Sensors</string>
    <string name="runner">Start Runner</string>
    <string name="location">Get location</string>
    <string name="map">Show map</string>


    <!--LOCATION SERVICE LABELS-->
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="speed_label">Speed</string>
    <string name="update_time_label">Last updated</string>
    <string name="distance_label">Distance travel since last location</string>
    <string name="no_location_detected">No location detected</string>
    <string name="login_successful">Welcome back, %s</string>

    <string name="permission_denied">Permission has not been granted for this service</string>
    <!--SENSOR LABELS-->
    <string name="accident_detected">An accident has occurred</string>
    <string name="title_activity_maps">Map</string>

    <!--BUTTON LABELS-->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="send_accident">Send Accident</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--RUNNER-->
    <string name="activity_runner">Runner - Active</string>
    <string name="activity_login">Login</string>
    <string name="activity_main">Runner</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="password_confirm_label">Password Confirm (Registration Only)</string>
    <string name="prompt_password_confirm">Password Confirm</string>
    <string name="bypass">Bypass</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register_short">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_no_match_password">Passwords do not match</string>
    <string name="error_network">Network error</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--INTENT EXTRAS-->
    <string name="USER_ID_EXTRA">USER_ID</string>
    <string name="USERNAME_EXTRA">USERNAME</string>

</resources>
