<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.csir.myapplication.MainActivity">

    <Button
        android:id="@+id/sensor_display"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/sensor_display"
        android:onClick="getSensors" />

    <Button
        android:id="@+id/requests"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/requests"
        android:onClick="getRequests" />

    <Button
        android:id="@+id/location"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/location"
        android:onClick="getLocation" />

</LinearLayout>
