<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.csir.runner.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_email"
                    android:labelFor="@+id/email"
                    />

          <AutoCompleteTextView
                android:id="@id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              android:layout_below="@id/email_label"
                android:inputType="textEmailAddress"
                android:maxLines="1"
              />
                <TextView
                    android:id="@+id/password_label"
                    android:layout_below="@id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_password"
                    android:labelFor="@+id/password"
                    />
            <EditText
                android:id="@id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:layout_below="@id/password_label"
                android:inputType="textPassword"
                android:maxLines="1"
                />
                <TextView
                    android:id="@+id/password_confirm_label"
                    android:layout_below="@id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_confirm_label"
                    android:labelFor="@+id/password_confirm"
                    />

            <EditText
                android:id="@id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:layout_below="@id/password_confirm_label"
                android:inputType="textPassword"
                android:maxLines="1"
                />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@id/password_confirm"
                android:text="@string/action_sign_in_short"
                />
            <Button
                android:id="@+id/email_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_toEndOf="@id/email_sign_in_button"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_confirm"
                android:layout_marginTop="16dp"
                android:text="@string/action_register_short"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
